iac/kustomize/base/architecture/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: architecture
  namespace: kube-public
spec:
  selector:
    app: architecture
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
